[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherrecon"
version = "2.0.0"
description = "Modular cybersecurity reconnaissance & assessment platform for authorized targets, labs, and CTF environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AetherRecon Contributors"}
]
keywords = ["security", "reconnaissance", "ctf", "pentesting", "authorized-scanning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "rich>=13.7",
    "textual>=0.50",
    "click>=8.1",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "cryptography>=42.0",
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",
    "aiofiles>=23.2",
    "tldextract>=5.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
aetherrecon = "aetherrecon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
